Some updates.